--- a/index.html
+++ b/index.html
@@ -48,7 +48,8 @@
 			font-size:28px;
 		}
 
-		img{
+		#environment{
+			position:relative;
 		}
 
 	</style>
@@ -82,7 +83,10 @@
 
 	</table>
 
-<center> <img src="https://banner2.cleanpng.com/20190617/oix/kisspng-natural-environment-clip-art-environmental-policy-5d0836ca776119.511529781560819402489.jpg"> </center>
+<br>
+<br>
+<br>
+<center> <img id="environment" src="Environment.png"> </center>
 
 </body>
 </html>
