--- a/jokes.html
+++ b/jokes.html
@@ -97,15 +97,15 @@
 
 	<div id="mastercontainer">
 		<div id="container1" class="container">
-			<div id="one" class="circle"></div>
-			<div id="two" class="circle"></div>
-			<div id="three" class="circle"></div>
+			<div id="one" class="circle">1</div>
+			<div id="two" class="circle">2</div>
+			<div id="three" class="circle">3</div>
 		</div> 
 
 		<div id="container2" class="container">
-			<div id="four" class="circle"></div>
-			<div id="five" class="circle"></div>
-			<div id="six" class="circle"></div>
+			<div id="four" class="circle">4</div>
+			<div id="five" class="circle">5</div>
+			<div id="six" class="circle">6</div>
 		</div>
 	</div> 
 
