--- a/journal.html
+++ b/journal.html
@@ -97,6 +97,11 @@
 
 	</table>
 
+<h1>November 9, 2020</h1> 
+<p>
+	I just added some information to the shared google doc term bank. I need to add a link to my person card. Hopefully things will start coming together. I've been lagging a bit behind on sleep: need to put that as #1 for a bit to restore my brain functionality. I attended the group lab that Wednesday and was just playing around with some image ideas on my home page. I should add an About Me page soon and maybe add my jokes codesketch to my projects page. However, it isn't complete yet. Anyways, I'm excited about the direction this is going in.
+</p>
+
 <h1>November 1, 2020</h1> 
 <p>
 	Making my website was kind of fun. I spent some time picking which fonts I liked: I prefer the handwriting types: it's just more soothing to me. I worked on copying some of the css that was in my home page over to my journal and projects to keep the same menu bar on top for all of them. I worked on the css for the paragraph and header tags and the overall background color for the website as well. I also added a link tag that allows a user to go back to the home page from the journal and projects pages. I haven't added an about page yet, so when someone clicks on that, it will just go to the projects page. <br> <br>
@@ -104,7 +109,6 @@
 	Something that was a bit frustrating was making sure the menu bar at the top (using the table) would be evenly assumed. I assumed all the cells would have the same width, but it turns out that 'About Me' because it is longer takes up more space and that cell is larger by default. To get rid of that, I had to play with the table layout and make sure that each cell took up 1/3 of the width. I also had some trouble spacing out the header and paragraph tags. I wanted the journal text to be directly under the heading without any spacing, but I'm not totally sure how to do that yet. I saw that the h1 tag had the least spacing, so I went with that, but I want to be able to do this more on my own. I also added a bunch of br tags to create line spaces throughout the journal. Excited! Happy November!
 </p>
 
-<br>
 <h1>October 20, 2020</h1> 
 <p>
 	So far, I have worked on my person-card and my code sketch by adding various circles to my pages, adding event listeners, and experimenting with CSS for background images. I have also had a few labs with you discussing Javascript though it is still a bit confusing to me. For my person-card, I have been experimenting with adding different colors, centering, and noticing the stop-start pattern of the gifs. <br><br>
