--- a/projects.html
+++ b/projects.html
@@ -52,6 +52,18 @@
 			font-size:28px;
 		}
 
+		h1{
+			font-family: 'Shadows Into Light', cursive;
+			color: black;
+			font-size:21px;
+		}
+
+		p{
+			font-family: 'Shadows Into Light', cursive;
+			color: rgb(60, 60, 60);
+			font-size:16px;
+		}
+
 	</style>
 
 </head>
@@ -82,6 +94,11 @@
 		</tr>
 
 	</table>
+
+<br>
+<center><a href="https://codepen.io/c23rm/pen/abNxRxj"><h1>My Person Card!</h1></a></center>
+
+<center><a href="jokes.html"><h1>Ears Up!</h1></a></center>
 
 <center><a href="index.html"><h4>Back Home</h4></a></center>
 
