--- a/index.html
+++ b/index.html
@@ -50,6 +50,23 @@
 
 		#environment{
 			position:relative;
+			border-width: 5px;
+			border-color: white;
+		}
+
+		#ocean{
+			position:absolute;
+			width: 100%;
+			height: 100%;
+			background-image: none;
+			transition: ease-in-out 1s;
+		}
+
+		#ocean:hover{
+			background-image: url(https://media1.tenor.com/images/40b8c63b8bedaa773864906740d86a30/tenor.gif?itemid=10930023); 
+			background-repeat:no-repeat;
+			background-size:cover;
+			transition: 1s;
 		}
 
 	</style>
@@ -82,6 +99,8 @@
 		</tr>
 
 	</table>
+
+<div id="ocean"></div>
 
 <br>
 <br>
