new journal entry

--- a/journal.html
+++ b/journal.html
@@ -97,6 +97,17 @@
 
 	</table>
 
+
+<h1>November 16, 2020</h1> 
+<p>
+	Another Monday! So guess what? Another journal because someone keeps leaving these to the last minute. Having been working on computer-science on and off today since 6:20 pm and it's now 8:50 pm, so I'm logging those hours. I finished up a good draft of my first codesketch and added a button to spit out a random number. It doesn't look too much like a dice asthetically which bugs me a little bit, but it'll be something that I come back to further down the line. <br> <br>
+
+	I've been working on a lot of code which is amazing. I have this idea for my second code-sketch: a birthday one where the letters of the phrase, 'Happy Birthday!', are scattered across the page. And you have to find them. Perhaps the letters will be moving every couple of seconds to switch things up but that's a 'nice-to-have' I guess. I wanted to work on this for a birthday present for either my dad or my sister: both of their birthdays are coming up soon (my dad's is this Friday and my sister's is next Monday). My family has a lot of birthdays in November. <br> <br>
+
+	I also worked on some asthetic things for the projects page, and maybe I should start developing the 'about me' page during the next week on my website. I feel those are all things that will require some work and some time when I'm in the right mindset to tackle it. I researched a lot about W3 schools for this birthday project where you have to find the letters of 'Happy Birthday' that are originally blended into the background, but, when you find a letter, it turns back to black, so you can see it. I'm excited for this project. I feel like I'm not doing quick code-sketches but some more complex ones that might take me a bit more time, but that's okay, and I'm excited to see where I can go with this. Talk to you soon.
+</p>
+
+
 <h1>November 9, 2020</h1> 
 <p>
 	I just added some information to the shared google doc term bank. I need to add a link to my person card. Hopefully things will start coming together. I've been lagging a bit behind on sleep: need to put that as #1 for a bit to restore my brain functionality. I attended the group lab that Wednesday and was just playing around with some image ideas on my home page. I should add an About Me page soon and maybe add my jokes codesketch to my projects page. However, it isn't complete yet. Anyways, I'm excited about the direction this is going in.
