--- a/projects.html
+++ b/projects.html
@@ -64,6 +64,16 @@
 			font-size:16px;
 		}
 
+		img{
+			border: 1px solid #555;
+			position: relative;
+			top:0%;
+		}
+
+		#EarsUp{
+			position:relative;
+		}
+
 	</style>
 
 </head>
@@ -96,9 +106,29 @@
 	</table>
 
 <br>
-<center><a href="https://codepen.io/c23rm/pen/abNxRxj"><h1>My Person Card!</h1></a></center>
 
-<center><a href="jokes.html"><h1>Ears Up!</h1></a></center>
+<table>
+	<tr>
+		<td>
+			<a href="https://codepen.io/c23rm/pen/abNxRxj"><h1>My Person Card!</h1></a>
+		</td>
+
+		<td>
+			<a href="jokes.html"><h1>Ears Up!</h1></a>
+		</td>
+	</tr>
+
+	<tr>
+		<td>
+			<a href="https://codepen.io/c23rm/pen/abNxRxj"><img src="CodepenPic.png" width="200"></a>
+		</td>
+
+		<td>
+			<a href="jokes.html"><img id="EarsUp" src="JokesPic.png" height="277" width="200"></a>
+		</td>
+	</tr>
+</table>
+
 
 <center><a href="index.html"><h4>Back Home</h4></a></center>
 
