--- a/journal.html
+++ b/journal.html
@@ -98,6 +98,14 @@
 	</table>
 
 
+<h1>November 23, 2020</h1> 
+<p>
+	Yup, it's Monday again which means that Raam procrastinated about doing his omputer science homework. Also, I had a couple of birthdays in my family which we celebrated. My knee's really been bothering me. In other computer-science related news, I finish up a good codesketch for my dad's birthday which was last Friday. After you find all 13 letters, the happy birthday song plays with an error margin of I think 3 clicks just in class you click on something twice. I'm going to decrease this counter to 14 from 16. <br> <br>
+
+	Next up is another codesketch about gratitude. I want hearts to expand and pop up all over the screen with new ones appearing every second and the bottle cork sound effect going off every time a new heart expands onto the page. I've been working with the setInterval function which I'm still figuring out. I got a new heart to appear in a block format every second, so that's a start, and I look forward to working on this more tomorrow. This was an adaptation of an octopus exercise we did in class I think two weeks ago. Good night!
+
+</p>
+
 <h1>November 16, 2020</h1> 
 <p>
 	Another Monday! So guess what? Another journal because someone keeps leaving these to the last minute. Having been working on computer-science on and off today since 6:20 pm and it's now 8:50 pm, so I'm logging those hours. I finished up a good draft of my first codesketch and added a button to spit out a random number. It doesn't look too much like a dice asthetically which bugs me a little bit, but it'll be something that I come back to further down the line. <br> <br>
