--- a/projects.html
+++ b/projects.html
@@ -116,15 +116,23 @@
 		<td>
 			<a href="jokes.html"><h1>Ears Up!</h1></a>
 		</td>
+
+		<td>
+			<a href="birthday.html"><h1>Birthday Search!</h1></a>
+		</td>
 	</tr>
 
 	<tr>
 		<td>
-			<a href="https://codepen.io/c23rm/pen/abNxRxj"><img src="CodepenPic.png" width="200"></a>
+			<a href="https://codepen.io/c23rm/pen/abNxRxj"><img src="PersonCardPic.png" width="200"></a>
 		</td>
 
 		<td>
 			<a href="jokes.html"><img id="EarsUp" src="JokesPic.png" height="277" width="200"></a>
+		</td>
+
+		<td>
+			<a href="birthday.html"><img src="BirthdayPic.png" id="birthdaypic" width="300"></a>
 		</td>
 	</tr>
 </table>
