--- a/about.html
+++ b/about.html
@@ -52,6 +52,13 @@
 			font-size:28px;
 		}
 
+		p{
+			font-family: 'Shadows Into Light', cursive;
+			color: rgb(60, 60, 60);
+			font-size:24px;
+			margin: 8px;
+		}
+
 	</style>
 
 </head>
@@ -82,6 +89,10 @@
 		</tr>
 
 	</table>
+
+
+<br>
+<p>Hey, I'm Raam! Some of my hobbies include running, reading, and playing games with my family. I love playing squash and am into fitness too. My favorite subjects are math and science, and I really like puzzle-solving and abstract thinking although it can be challenging at times. I think I like all of the colors, well the ones that I can see. I like to watch tennis and CrossFit and hanging out with my friends when I can. </p>
 
 <center><a href="index.html"><h4>Back Home</h4></a></center>
 
