--- a/journal.html
+++ b/journal.html
@@ -97,10 +97,16 @@
 
 	</table>
 
+<h1>November 30, 2020</h1> 
+<p>
+	Happy Thanksgiving! Well, kind of. I'm not sure if you're reading this when it's Thanksgiving. Maybe you are. Maybe you aren't. I'm not even sure how you find my website, so let's leave that aside. I added some stuff to my website, that's all. Excited to improve my Javascript skills. We didn't have any homework over the break, but I did work on a gratitude codesketch to my DaDa (Grandpa). I want to have several images fade out over time. Right now I just have the one, but I would be somewhat content if I left it at this. Excited to see where I can take this. Have a good night! Or good morning or afternoon... again, I have no idea who you are. It would be kinda cool if I could read through the screen. Maybe you're my teacher I'm not sure. Take care though. 
+
+</p>
+
 
 <h1>November 23, 2020</h1> 
 <p>
-	Yup, it's Monday again which means that Raam procrastinated about doing his omputer science homework. Also, I had a couple of birthdays in my family which we celebrated. My knee's really been bothering me. In other computer-science related news, I finish up a good codesketch for my dad's birthday which was last Friday. After you find all 13 letters, the happy birthday song plays with an error margin of I think 3 clicks just in class you click on something twice. I'm going to decrease this counter to 14 from 16. <br> <br>
+	Yup, it's Monday again which means that Raam procrastinated about doing his computer science homework. Also, I had a couple of birthdays in my family which we celebrated. My knee's really been bothering me. In other computer-science related news, I finish up a good codesketch for my dad's birthday which was last Friday. After you find all 13 letters, the happy birthday song plays with an error margin of I think 3 clicks just in class you click on something twice. I'm going to decrease this counter to 14 from 16. <br> <br>
 
 	Next up is another codesketch about gratitude. I want hearts to expand and pop up all over the screen with new ones appearing every second and the bottle cork sound effect going off every time a new heart expands onto the page. I've been working with the setInterval function which I'm still figuring out. I got a new heart to appear in a block format every second, so that's a start, and I look forward to working on this more tomorrow. This was an adaptation of an octopus exercise we did in class I think two weeks ago. Good night!
 
