--- a/projects.html
+++ b/projects.html
@@ -135,6 +135,28 @@
 			<a href="birthday.html"><img src="BirthdayPic.png" id="birthdaypic" width="300"></a>
 		</td>
 	</tr>
+
+	<!-- Second Set of Row 2 Below: -->
+
+	<tr>
+		<td></td>
+
+		<td>
+			<a href="gratitude.html"><h1>Thankful.</h1></a>
+		</td>
+
+		<td></td>
+	</tr>
+
+	<tr>
+		<td></td>
+
+		<td>
+			<a href="gratitude.html"><img id="EarsUp" src="GratitudeProjectPic.png" width="250"></a>
+		</td>
+
+		<td></td>
+	</tr>
 </table>
 
 
