--- a/gratitude.html
+++ b/gratitude.html
@@ -5,10 +5,23 @@
 	<style type="text/css">
 		
 		.hearts{
-			width:100px;
-			height:100px;
+			width:50px;
+			height:50px;
 			background-size:contain;
+			position:absolute;
 			background-image: url(Heart.png);
+		}
+
+		#image{
+			height:640px;
+			width:480px;
+			position:absolute;
+			top:35px;
+			left:385px;
+			background-image:url(DaDaJi.jpg);
+			background-size:contain;
+			opacity:0;
+			transition: 1s;
 		}
 
 	</style>
@@ -16,20 +29,43 @@
 </head>
 <body>
 
+	<audio src="BottleCork.m4a" id="bottlecork"></audio>
+
+	<audio src="Wonderful.mp3" id="wonderful"></audio>
+
+	<div id="image"></div>
+
+	<!-- <img id="Saira" src="Saira.jpg"> -->
+
 	<script type="text/javascript">
+
+		let sound = document.getElementById('bottlecork');
+
+		let song = document.getElementById('wonderful')
+
+		let image = document.getElementById('image')
 		
 		function makeHeart(){
 			let heart = document.createElement("div");
 			document.body.appendChild(heart);
 			heart.classList.add("hearts");
-			heart.style.left = Math.random() * 800; + "px";
-			heart.style.top = Math.random() * 800; + "px";
+			heart.style.left = Math.random() * 1200 + "px";
+			heart.style.top = Math.random() * 680 + "px";
 
 		}
 
-		setInterval(makeHeart, 1000);
+		document.addEventListener(
+			"click", function(){
+				console.log("Happy Birthday!");
+				song.play();
+				image.style.opacity = 1;
+			}
+			)
+
+		setInterval(makeHeart, 200);
 
 	</script>
+
 
 </body>
 </html>
