jouranl, new in-progress project

--- a/journal.html
+++ b/journal.html
@@ -97,6 +97,11 @@
 
 	</table>
 
+<h1>December 7, 2020</h1> 
+<p>
+	That's right. It's December 7th... for me. I don't know for you. I had a lab with Ms. Josephs today to discuss my matching game that's currently in progress. I think I'm going to make two code-sketches, one where every time you reload the page, there are 16 squares, exactly 2 of each color. I'm still thinking of a way to make that happen. I was thinking about using a counter variable, but that would relate more to the second part. Or maybe we can tie the two parts together, so that when you click on a specific square, the color is randomized. And when and only when there are two squares with a specific color, do we call it a match, those squares disappear, and that color is removed from the array. Actually the more I'm thinking about this - I'm thinking to keep it together as one code-sketch. It's a challenging project, but I'm up for a challenge, and the struggle is where the growth happens, right? I'm going to put the matching game as in-progress in my projects if you wanted to see it, actually maybe the finished version will be up by the time I finish this, who knows? Again, I'm not totally sure who you are or what day or time it is on your end, I just know it'll be later than the time I'm writing this, well you are not me. Okay, I'll talk to you later, you meaning the journal. Bye! Thank you! 
+</p>
+
 <h1>November 30, 2020</h1> 
 <p>
 	Happy Thanksgiving! Well, kind of. I'm not sure if you're reading this when it's Thanksgiving. Maybe you are. Maybe you aren't. I'm not even sure how you find my website, so let's leave that aside. I added some stuff to my website, that's all. Excited to improve my Javascript skills. We didn't have any homework over the break, but I did work on a gratitude codesketch to my DaDa (Grandpa). I want to have several images fade out over time. Right now I just have the one, but I would be somewhat content if I left it at this. Excited to see where I can take this. Have a good night! Or good morning or afternoon... again, I have no idea who you are. It would be kinda cool if I could read through the screen. Maybe you're my teacher I'm not sure. Take care though. 
