--- a/projects.html
+++ b/projects.html
@@ -139,23 +139,28 @@
 	<!-- Second Set of Row 2 Below: -->
 
 	<tr>
-		<td></td>
 
 		<td>
 			<a href="gratitude.html"><h1>Thankful.</h1></a>
 		</td>
 
-		<td></td>
+		<td>
+			<a href="matching.html"><h1>Matching Game!</h1></a>
+		</td>
+
+		<!-- <td></td> -->
 	</tr>
 
 	<tr>
-		<td></td>
-
 		<td>
 			<a href="gratitude.html"><img id="EarsUp" src="GratitudeProjectPic.png" width="250"></a>
 		</td>
 
-		<td></td>
+		<td>
+			<a href="matching.html"><img id="MatchingGame" src="MatchingGamePic.png" width="315"></a>
+		</td>
+
+		<!-- <td></td> -->
 	</tr>
 </table>
 
