--- a/projects.html
+++ b/projects.html
@@ -145,7 +145,7 @@
 		</td>
 
 		<td>
-			<a href="matching.html"><h1>Matching Game!</h1></a>
+			<a href="matching.draft.html"><h1>Matching Game!</h1></a>
 		</td>
 
 		<!-- <td></td> -->
@@ -157,7 +157,7 @@
 		</td>
 
 		<td>
-			<a href="matching.html"><img id="MatchingGame" src="MatchingGamePic.png" width="315"></a>
+			<a href="matching.draft.html"><img id="MatchingGame" src="MatchingGamePic.png" width="315"></a>
 		</td>
 
 		<!-- <td></td> -->
