refresher codesketch, journal

--- a/journal.html
+++ b/journal.html
@@ -64,6 +64,9 @@
 			font-size:16px;
 		}
 
+		#datacollectionpic{
+			border:1px solid rgb(25, 164, 67);
+		}
 		
 
 	</style>
@@ -96,6 +99,17 @@
 		</tr>
 
 	</table>
+
+<h1>January 11, 2021</h1> 
+<p>
+	A New Year. It's a Monday. Here's an update on the work I did since last class: watched the refresher 1 and 2 videos and made a codesketch while watching along; briefly thought ideas for a Screen Time codesketch. I'm beginning to develop some ideas for a coding, Environmental project, potentially called EcoQuest. It would involve posting a quest idea every week along with some reasoning behind the steps for the quest. The steps would be applicable to daily-life and would be simple and actionable, still having a large impact. Also, the refresher codesketch, so far, should be up on my projects page if you're reading this on my website, going to put that into my code right after this journal. <br><br>
+
+	For the screen time codesketch, I think I might represent the numbers, which will be from my phone's data from last week, using bubbles. There might be a table with seven columns and two rows. On the second row, inside each column would be "bubbles" with different colors representing different areas of screen time: i.e. social networking, productivity or what Apple calls productivity, etc. The first row would just tell you what day we're talking about and the total screen time for that day. I like using parentheses when I write, just not sure how they're used when coding so a little afraid to use them. I think the size of the bubbles would be based on total time and relative to the average total time used per day across the week, but this could fluctuate based on if I like the space that the bubbles take up. I didn't work on it much this week, but hopefully I can get working on it either tomorrow in class or later this week as I'm actually pretty excited about the idea now. <br><br>
+
+	Also, below is a picture with some of my ideas from last class (January 5, excited the parenthesis work well!) about displaying the screen-time data and other data sets I was thinking of using, might revisit those too. Talk later, thank you!
+</p>
+
+<center><img id="datacollectionpic" src="DataCollectionIdeas.png" width="600px"></center>
 
 <h1>December 14, 2020</h1> 
 <p>
