--- a/projects.html
+++ b/projects.html
@@ -124,15 +124,15 @@
 
 	<tr>
 		<td>
-			<a href="https://codepen.io/c23rm/pen/abNxRxj"><img src="PersonCardPic.png" width="200"></a>
+			<a href="https://codepen.io/c23rm/pen/abNxRxj"><img src="PersonCardPic.png" width="80%"></a>
 		</td>
 
 		<td>
-			<a href="jokes.html"><img id="EarsUp" src="JokesPic.png" height="277" width="200"></a>
+			<a href="jokes.html"><img id="EarsUp" src="JokesPic.png" width="80%"></a>
 		</td>
 
 		<td>
-			<a href="birthday.html"><img src="BirthdayPic.png" id="birthdaypic" width="300"></a>
+			<a href="birthday.html"><img src="BirthdayPic.png" id="birthdaypic" width="80%"></a>
 		</td>
 	</tr>
 
@@ -148,19 +148,23 @@
 			<a href="matching.draft.html"><h1>Matching Game!</h1></a>
 		</td>
 
-		<!-- <td></td> -->
+		<td>
+			<a href="refresher1.html"><h1>H20 for Life - Water Guardians Program!</h1></a>
+		</td>
 	</tr>
 
 	<tr>
 		<td>
-			<a href="gratitude.html"><img id="EarsUp" src="GratitudeProjectPic.png" width="250"></a>
+			<a href="gratitude.html"><img id="EarsUp" src="GratitudeProjectPic.png" width="80%"></a>
 		</td>
 
 		<td>
-			<a href="matching.draft.html"><img id="MatchingGame" src="MatchingGamePic.png" width="315"></a>
+			<a href="matching.draft.html"><img id="MatchingGame" src="MatchingGamePic.png" width="80%%"></a>
 		</td>
 
-		<!-- <td></td> -->
+		<td>
+			<a href="refresher1.html"><img src="WaterGuardiansPic.png" width="80%"></a>
+		</td>
 	</tr>
 </table>
 
