journal, refresher codesketches

--- a/journal.html
+++ b/journal.html
@@ -58,7 +58,7 @@
 			font-size:21px;
 		}
 
-		p{
+		p, li{
 			font-family: 'Shadows Into Light', cursive;
 			color: rgb(60, 60, 60);
 			font-size:16px;
@@ -99,6 +99,26 @@
 		</tr>
 
 	</table>
+
+<h1>January 18, 2021</h1>
+<p>
+	It's Monday. Today is MLK Jr. day: forever grateful for the work he did and the change he inspired. Today I watched another refresher video and coded along with it. I now have two refresher codesketches on my projects page titled "H20 for Life: Water Guardians!" that has some description about the program (very interactive, I liked it a lot - directed towards middle schoolers and educators) and also 1,000 Water Guardian logos using a for loop. I liked brushing up my skills with that as well as using the click function to change position (of 1,000 logos!). <br><br>
+
+	The refresher 3 codesketch is titled "Favorite Foods!" although it was really foods I was thinking of while coding. This one uses an array to spit out different food combinations. Going forward here are some coding priorities:
+</p>
+<ol>
+	<li>Data Collection Codesketch: I have all the data in a spreadsheet, working on coding it using arrays will be something I want to work on before the weekend and maybe have some time to style the page next weekend.</li>
+	<li>New Website: I have some ideas for an environmental project that I wrote about in my previous journal entry that I would like to make a website for. Also, one of my friends and I launched a program last summer called Workout for the World where we ran a fitness competition and raised money through GoFundMe. I had this idea this year to host workout sessions to raise money for another cause - LLS (Leukemia and Lymphoma Society). I have to talk with him more deeply on this idea, but it'd be nice to have a basic website/webpage. For both/either of these, I'll have to understand git and GitHub a bit more. Maybe I can code a basic webpage and book a lab with Ms. Josephs to put it online.</li>
+	<li>Logo: Maybe should be put as a last priority but would love to see how the logo next to the webpage title in the browser bar works (forgot right now what this is called). It'd be cool to add one to my website.</li>
+	<li>Matching Game: Worked hard on this before winter break. The data collection codesketch and website are higher priorities as of now but this is definitely something I want to circle back to and try to finish up before the end of the month.</li>
+</ol>
+<p>
+	Thanks for reading this if you have. Have an amazing day, thank you! Pushing changes online... :)<br>
+	<center>
+		<p>Best Wishes,<br>
+		Raam</p>
+	</center>
+</p>
 
 <h1>January 11, 2021</h1> 
 <p>
