--- a/projects.html
+++ b/projects.html
@@ -108,6 +108,9 @@
 <br>
 
 <table>
+
+	<!-- First Set -->
+	
 	<tr>
 		<td>
 			<a href="https://codepen.io/c23rm/pen/abNxRxj"><h1>My Person Card!</h1></a>
@@ -165,6 +168,37 @@
 		<td>
 			<a href="refresher1.html"><img src="WaterGuardiansPic.png" width="80%"></a>
 		</td>
+	</tr>
+
+	<!-- Third Set --> 
+
+	<tr>
+
+		<td>
+			<a href="refresher3.html"><h1>Favorite Foods!</h1></a>
+		</td>
+
+		<!-- <td>
+			<a href=""><h1></h1></a>
+		</td>
+
+		<td>
+			<a href=""><h1></h1></a>
+		</td> -->
+	</tr>
+
+	<tr>
+		<td>
+			<a href="refresher3.html"><img src="FavoriteFoodsPic.png" width="80%"></a>
+		</td>
+
+		<!-- <td>
+			<a href=""><img src="" width="80%"></a>
+		</td>
+
+		<td>
+			<a href=""><img src="" width="80%"></a>
+		</td> -->
 	</tr>
 </table>
 
