--- a/refresher3.html
+++ b/refresher3.html
@@ -46,7 +46,7 @@
 
 	<script type="text/javascript">
 		
-		let food = ["falaffel", "oat milk", "almond milk", "kitchari", "dhal", "rice", "scallion pancakes", "mushrooms", "pizza", "Hui"]
+		let food = ["falaffel", "oat milk", "almond milk", "kitchari", "dhal", "rice", "scallion pancakes", "mushrooms", "pizza", "Hui chocolate"]
 
 		let plate = document.getElementById("plate");
 
