--- a/journal.html
+++ b/journal.html
@@ -2,9 +2,11 @@
 <html>
 <head>
 
+	<link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
+
 	<link href="https://fonts.googleapis.com/css2?family=Annie+Use+Your+Telescope&family=Bad+Script&family=Shadows+Into+Light&display=swap" rel="stylesheet"> 
 
-	<title></title>
+	<title>Journal</title>
 
 	<style type="text/css">
 		
