--- a/matching.draft.html
+++ b/matching.draft.html
@@ -1,6 +1,10 @@
 <!DOCTYPE html>
 <html>
 <head>
+
+	<link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
+
+	<title>Matching Game!</title>
 			
 	<style type="text/css">
 		#box{
