--- a/refresher3.html
+++ b/refresher3.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head>
-
+	
+	<link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
 	<link rel="preconnect" href="https://fonts.gstatic.com">
 	<link href="https://fonts.googleapis.com/css2?family=Righteous&display=swap" rel="stylesheet">
 
@@ -46,7 +47,7 @@
 
 	<script type="text/javascript">
 		
-		let food = ["falaffel", "oat milk", "almond milk", "kitchari", "dhal", "rice", "scallion pancakes", "mushrooms", "pizza", "Hui chocolate"]
+		let food = ["falaffel", "oat milk", "almond milk", "kitchari", "dhal", "rice", "scallion pancakes", "mushrooms", "pizza", "Hu chocolate"]
 
 		let plate = document.getElementById("plate");
 
