--- a/birthday.html
+++ b/birthday.html
@@ -1,6 +1,11 @@
 <!DOCTYPE html>
 <html>
 <head>
+
+	<link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
+
+	<title>Birthday Search!</title>
+	
 	<style type="text/css">
 		
 		.letter{
