--- a/gratitude.html
+++ b/gratitude.html
@@ -1,6 +1,10 @@
 <!DOCTYPE html>
 <html>
 <head>
+
+	<link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
+
+	<time>Grateful.</time>
 	
 	<style type="text/css">
 		
