--- a/index.html
+++ b/index.html
@@ -2,9 +2,17 @@
 <html>
 <head>
 
+	<link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+	<link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+	<link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+	<meta name="msapplication-TileColor" content="#da532c">
+	<meta name="theme-color" content="#ffffff">
+
+	<link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
+
 	<link href="https://fonts.googleapis.com/css2?family=Annie+Use+Your+Telescope&family=Bad+Script&family=Shadows+Into+Light&display=swap" rel="stylesheet"> 
 
-	<title></title>
+	<title>Home</title>
 
 	<style type="text/css">
 		
