--- a/jokes.html
+++ b/jokes.html
@@ -3,6 +3,8 @@
 
 <head>
 
+	<link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
+
 	<title>Raam's Jokes</title>
 
 	<style type="text/css">
