--- a/matching.html
+++ b/matching.html
@@ -3,6 +3,10 @@
 
 <head>
 
+	<link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
+
+	<title>Matching Game!</title>
+
 	<link href="https://fonts.googleapis.com/css2?family=Annie+Use+Your+Telescope&family=Bad+Script&family=Shadows+Into+Light&display=swap" rel="stylesheet"> 
 	
 	<style type="text/css">
