screen time codesketch, journal, favicon on one project

--- a/projects.html
+++ b/projects.html
@@ -180,13 +180,13 @@
 			<a href="refresher3.html"><h1>Favorite Foods!</h1></a>
 		</td>
 
-		<!-- <td>
-			<a href=""><h1></h1></a>
+		<td>
+			<a href="screentime.html"><h1>Screen Time</h1></a>
 		</td>
 
-		<td>
+		<!-- <td>
 			<a href=""><h1></h1></a>
-		</td> -->
+		</td>  -->
 	</tr>
 
 	<tr>
@@ -194,11 +194,11 @@
 			<a href="refresher3.html"><img src="FavoriteFoodsPic.png" width="80%"></a>
 		</td>
 
-		<!-- <td>
-			<a href=""><img src="" width="80%"></a>
+		<td>
+			<a href="screentime.html"><img src="ScreenTimePic.png" width="80%"></a>
 		</td>
 
-		<td>
+		<!-- <td>
 			<a href=""><img src="" width="80%"></a>
 		</td> -->
 	</tr>
