--- a/gratitude.html
+++ b/gratitude.html
@@ -4,7 +4,7 @@
 
 	<link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
 
-	<time>Grateful.</time>
+	<title>Grateful.</title>
 	
 	<style type="text/css">
 		
