--- a/journal.html
+++ b/journal.html
@@ -102,6 +102,15 @@
 
 	</table>
 
+<h1>January 25, 2021</h1>
+<p>
+	Getting super late, so going to make this a quick one. This week, I had a lab with Ms. Josephs and continued to work on the screen time codesketch. All the functionality is working well, able to get all 21 circles or 'bubbles' appear on the screen with their size dictated by their input value (total number of minutes on phone that day). Looks good, even got them to have random positioning. Colors are a bit sporadic, want them to be varying degrees of orange with the bigger bubbles being darker and the smaller ones being lighter. But it's working well, so I'm happy about the progress. For some reason the <= functionality for less than or equal to was not working yesterday but tried it today and good as far as I know. Going to update the projects page with a draft of the screen time codesketch and then head to bed. Have a good night! Oh, also, I got the favicon for my website (the logo in the browser bar) working smoothly, so super excited about that too! Hopefully see you soon!
+	<center>
+		<p> Best Wishes, <br>
+		Raam </p>
+	</center>
+</p>
+
 <h1>January 18, 2021</h1>
 <p>
 	It's Monday. Today is MLK Jr. day: forever grateful for the work he did and the change he inspired. Today I watched another refresher video and coded along with it. I now have two refresher codesketches on my projects page titled "H20 for Life: Water Guardians!" that has some description about the program (very interactive, I liked it a lot - directed towards middle schoolers and educators) and also 1,000 Water Guardian logos using a for loop. I liked brushing up my skills with that as well as using the click function to change position (of 1,000 logos!). <br><br>
